made header fixed, added spacing between header and content

--- a/styles.scss
+++ b/styles.scss
@@ -24,6 +24,11 @@ h4 {
   font-weight: bold;
 }
 
+.spacer {
+  width: 100%;
+  height: 40px;
+}
+
 .container {
   width: 990px;
   margin: 0 auto;
@@ -81,12 +86,11 @@ aside {
 
 header {
   background-color: #fffd99;
-  /*position: fixed;*/
+  position: fixed;
   width: 100%;
   height: 40px;
   border-left: 0;
   border-right: 0;
-
 
   h3 {
     padding-top: 10px;
